--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.6",
     "@mui/icons-material": "^5.15.6",
+    "@mui/material": "^5.15.6",
+    "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-router": "^1.15.0",
+    "@tanstack/react-table": "^8.21.3",
+    "@tanstack/react-virtual": "^3.13.13",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@tanstack/router-devtools": "^1.15.0",
